--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "localforage": "^1.10.0",
     "match-sorter": "^8.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.2.10"
